feat: add remaining documentation for user controller
